<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/update_details" />
        <item
            android:id="@+id/nav_apply"
            android:icon="@drawable/ic_insert_invitation_black_24dp"
            android:title="@string/apply_concession" />
        <item
            android:id="@+id/nav_cancel"
            android:icon="@drawable/ic_cancel_black_24dp"
            android:title="@string/cancel_concession" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/view" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>



</menu>
