<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dark3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="Register"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/dark"
        android:visibility="visible" />



    <EditText

        android:layout_gravity="center"
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundcorners"
        android:hint="@string/name"
        android:inputType="textPersonName"/>

    <EditText
        android:layout_gravity="center"
        android:id="@+id/roll"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundcorners"
        android:hint="@string/roll_no"
        android:inputType="number"/>

    <EditText
        android:layout_gravity="center"
        android:id="@+id/dob"
        android:textSize="18sp"
        android:textAlignment="gravity"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundcorners"
        android:hint="@string/date_of_birth_tap_to_select" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/add"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundcorners"
        android:hint="@string/address"
        android:inputType="textNoSuggestions"/>
    <EditText
        android:layout_gravity="center"
        android:id="@+id/mob"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundcorners"
        android:hint="@string/mobile_no"
        android:inputType="number"/>

    <EditText
        android:layout_gravity="center"
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundcorners"
        android:hint="Email ID"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_gravity="center"
        android:id="@+id/fee_reciept_no"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundcorners"
        android:hint="@string/fee_reciept_no"
        android:inputType="textNoSuggestions"/>
    <Button
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons"/>


</LinearLayout>
