<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dark3">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <EditText
            android:background="@drawable/roundcorners"
            android:id="@+id/updroll"
            android:layout_marginTop="60dp"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:hint="@string/roll_no"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/updadd"
            android:background="@drawable/roundcorners"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/updemail"
            android:background="@drawable/roundcorners"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/buttons"
            android:id="@+id/updsend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            />

        <Button
            android:background="@drawable/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_gravity="center"
            android:id="@+id/updclear"
            android:text="@string/clear" />



    </LinearLayout>



</LinearLayout>
