<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dark3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/dark"
        android:visibility="visible" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/username_rollno"
        android:textAllCaps="false"
        android:background="@drawable/roundcorners"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/pswd"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/password_dob_dd_m_yyyy"
        android:background="@drawable/roundcorners"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:id="@+id/login"
        android:background="@drawable/buttons"/>


</LinearLayout>
