<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/red"
        app:cardUseCompatPadding="true">

        <TextView
                android:id="@+id/viewname"
                android:textColor="@color/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="130dp"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/viewsource"
                android:textColor="@color/dark"
                android:layout_marginTop="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/viewdest"
                android:layout_marginLeft="200dp"
                android:textColor="@color/dark"
                android:layout_marginTop="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textAlignment="textEnd"
                android:textSize="25sp"
                android:gravity="end" />
            <TextView
                android:id="@+id/viewclss"
                android:textColor="@color/dark"
                android:layout_marginTop="140dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clss"
                android:textSize="25sp"/>

            <TextView
                android:gravity="end"
                android:textAlignment="textEnd"
                android:id="@+id/viewnom"
                android:layout_marginLeft="250dp"
                android:textColor="@color/dark"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/viewtoken"
                android:textColor="@color/dark"
                android:layout_gravity="left"
                android:layout_marginTop="160dp"
                android:layout_marginStart="270dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textSize="55sp"
                android:layout_marginLeft="20dp" />

    </android.support.v7.widget.CardView>

</RelativeLayout>
