<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dark3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <EditText
            android:background="@drawable/roundcorners"
            android:textColor="@color/black"
            android:id="@+id/emailid"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            tools:ignore="TextFields" />

        <EditText

            android:background="@drawable/roundcorners"
            android:textColor="@color/black"
            android:id="@+id/feed"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:hint="Feedback"
            android:inputType="textMultiLine"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/buttons"
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            />

        <Button
            android:background="@drawable/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_gravity="center"
            android:id="@+id/clear"
            android:text="@string/clear" />



    </LinearLayout>







</LinearLayout>
