

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dark3">



    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/roll_no"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/rollno"
            android:background="@drawable/roundcorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/source"
            android:layout_marginLeft="10dp"/>

        <Spinner
            android:background="@drawable/roundcorners"
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:prompt="@string/prompt"
            android:entries="@array/Source">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/destination"
            android:layout_marginLeft="10dp"/>

        <Spinner
            android:background="@drawable/roundcorners"
            android:id="@+id/dest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:entries="@array/des">


        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Class"
            android:layout_marginLeft="10dp"/>

        <Spinner
            android:background="@drawable/roundcorners"
            android:id="@+id/clss"
            android:prompt="@array/plz"
            android:entries="@array/clss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="No Of Months"
            android:layout_marginLeft="10dp"/>

        <Spinner
            android:background="@drawable/roundcorners"
            android:id="@+id/nom"
            android:entries="@array/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">

        </Spinner>

    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/date"
            android:textSize="20sp"/>

        <TextView
            android:background="@drawable/roundcorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:textSize="20sp"
            android:id="@+id/dateapply"
            android:hint="@string/tap_here_to_select_date"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Proceed"
        android:background="@drawable/buttons"
        android:layout_gravity="center"/>
    </LinearLayout>










