<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark3">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_no"
        android:textSize="20sp"
        android:textColor="@color/dark"/>
    <TextView
        android:id="@+id/lroll"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="150dp"
        android:textColor="@color/dark"/>
    <TextView
        android:layout_marginTop="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20sp"
        android:textColor="@color/dark"/>
    <TextView
        android:id="@+id/ldate"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="150dp"
        android:textColor="@color/dark"/>
    <TextView
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token_no"
        android:textSize="20sp"
        android:textColor="@color/dark"/>
    <TextView
        android:id="@+id/ltoken"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:textSize="20sp"
        android:layout_marginStart="150dp"
        android:textColor="@color/dark"/>
    <ImageView
        android:id="@+id/cancell"
        android:layout_marginTop="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cancel"
        android:layout_marginLeft="350dp"
        android:layout_marginStart="350dp" />
</RelativeLayout>
